project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/scryptenc-cli-v0.7.14\...HEAD[Unreleased]

=== Changed

* Bump MSRV to 1.85.0 ({pull-request-url}/557[#557])
* Restore demo animation ({pull-request-url}/581[#581])
* Change the license for documents and assets to CC BY 4.0
  ({pull-request-url}/598[#598])

== {compare-url}/scryptenc-cli-v0.7.13\...scryptenc-cli-v0.7.14[0.7.14] - 2025-01-09

=== Changed

* Description of options which depends on the features are always available
  ({pull-request-url}/530[#530])

== {compare-url}/scryptenc-cli-v0.7.12\...scryptenc-cli-v0.7.13[0.7.13] - 2024-08-04

=== Changed

* Change `--passphrase-from-env` to take an UTF-8 string as an environment
  variable key ({pull-request-url}/407[#407])

== {compare-url}/scryptenc-cli-v0.7.11\...scryptenc-cli-v0.7.12[0.7.12] - 2024-04-17

=== Changed

* Change to remove unnecessary files from the book
  ({pull-request-url}/255[#255])

== {compare-url}/scryptenc-cli-v0.7.10\...scryptenc-cli-v0.7.11[0.7.11] - 2024-04-16

=== Changed

* Update examples in man pages

== {compare-url}/scryptenc-cli-v0.7.9\...scryptenc-cli-v0.7.10[0.7.10] - 2024-02-18

=== Changed

* Bump MSRV to 1.74.0 ({pull-request-url}/163[#163])

== {compare-url}/scryptenc-cli-v0.7.8\...scryptenc-cli-v0.7.9[0.7.9] - 2024-01-21

=== Changed

* Add description about behavior of `-h`, `--help` and `--version` in man pages
  ({pull-request-url}/127[#127])

== {project-url}/releases/tag/scryptenc-cli-v0.7.8[0.7.8] - 2024-01-18

=== Changed

* Change the error message when decryption fails
  ({old-pull-request-url}/408[sorairolake/rscrypt#408])
* Merge into repository of `scryptenc` crate ({pull-request-url}/115[#115])
* Remove last blank line of `--version` ({pull-request-url}/120[#120])

== {old-compare-url}/v0.7.6\...v0.7.7[0.7.7] - 2024-01-07

=== Changed

* Reduce the target architecture and the archive format for pre-built binaries
  ({old-pull-request-url}/386[sorairolake/rscrypt#386])
