@@ -12,5 +12,6 @@
 ** xref:man/man1/rscrypt-enc.1.adoc[`rscrypt-enc(1)`]
 ** xref:man/man1/rscrypt-dec.1.adoc[`rscrypt-dec(1)`]
 ** xref:man/man1/rscrypt-info.1.adoc[`rscrypt-info(1)`]
+** xref:man/man1/rscrypt-completion.1.adoc[`rscrypt-completion(1)`]
 ** xref:man/man1/rscrypt-help.1.adoc[`rscrypt-help(1)`]
 * xref:changelog.adoc[]
