@@ -1,0 +1,1 @@
+../../../../../../man/man1/rscrypt-completion.1.adoc
