@@ -1,8 +1,8 @@
-// SPDX-FileCopyrightText: 2023 Shun Sakai
+// SPDX-FileCopyrightText: 2025 Shun Sakai
 //
 // SPDX-License-Identifier: CC-BY-4.0
 
-= rscrypt-help(1)
+= rscrypt-completion(1)
 // Specify in UTC.
 :docdate: 2025-05-11
 :revnumber: 0.7.14
@@ -13,25 +13,48 @@ ifndef::site-gen-antora[:includedir: ./include]
 
 == NAME
 
-rscrypt-help - print the help for a command
+rscrypt-completion - generate shell completion
 
 == SYNOPSIS
 
-*rscrypt help* [_COMMAND_]
+*rscrypt completion* _SHELL_
 
 == DESCRIPTION
 
-This command prints the help for a command.
-
-This command is identical to any of the following:{blank}::
-
-  $ *rscrypt* [_COMMAND_] *-h*|*--help*
+This command generates shell completion. The completion is output to standard
+output.
 
 == POSITIONAL ARGUMENTS
 
-_COMMAND_::
+_SHELL_::
 
-  Subcommand to print the help.
+  Shell to generate completion for.
+
+  The possible values are:{blank}:::
+
+    *bash*::::
+
+      Bash.
+
+    *elvish*::::
+
+      Elvish.
+
+    *fish*::::
+
+      fish.
+
+    *nushell*::::
+
+      Nushell.
+
+    *powershell*::::
+
+      PowerShell.
+
+    *zsh*::::
+
+      Zsh.
 
 ifndef::site-gen-antora[include::{includedir}/section-exit-status.adoc[]]
 ifdef::site-gen-antora[include::partial$man/man1/include/section-exit-status.adoc[]]
@@ -47,5 +70,5 @@ ifdef::site-gen-antora[include::partial$man/man1/include/section-copyright.adoc[
 
 == SEE ALSO
 
-*rscrypt*(1), *rscrypt-completion*(1), *rscrypt-dec*(1), *rscrypt-enc*(1),
+*rscrypt*(1), *rscrypt-dec*(1), *rscrypt-enc*(1), *rscrypt-help*(1),
 *rscrypt-info*(1), *scrypt*(1)
