@@ -4,7 +4,7 @@
 
 = rscrypt-dec(1)
 // Specify in UTC.
-:docdate: 2025-03-10
+:docdate: 2025-05-11
 :revnumber: 0.7.14
 :doctype: manpage
 :mansource: rscrypt {revnumber}
@@ -128,5 +128,5 @@ ifdef::site-gen-antora[include::partial$man/man1/include/section-copyright.adoc[
 
 == SEE ALSO
 
-*rscrypt*(1), *rscrypt-enc*(1), *rscrypt-help*(1), *rscrypt-info*(1),
-*scrypt*(1)
+*rscrypt*(1), *rscrypt-completion*(1), *rscrypt-enc*(1), *rscrypt-help*(1),
+*rscrypt-info*(1), *scrypt*(1)
