@@ -4,7 +4,7 @@
 
 = rscrypt(1)
 // Specify in UTC.
-:docdate: 2025-03-10
+:docdate: 2025-05-11
 :revnumber: 0.7.14
 :doctype: manpage
 :mansource: rscrypt {revnumber}
@@ -39,6 +39,10 @@ rscrypt - an utility for encrypt and decrypt files
 
   Provides information about the encryption parameters.
 
+*rscrypt-completion*(1)::
+
+  Generate shell completion.
+
 *rscrypt-help*(1)::
 
   Print the help for a command.
@@ -54,36 +58,6 @@ rscrypt - an utility for encrypt and decrypt files
 
   Print version number. The long flag (*--version*) will also print the
   copyright notice, the license notice and where to report bugs.
-
-*--generate-completion* _SHELL_::
-
-  Generate shell completion. The completion is output to standard output.
-
-  The possible values are:{blank}:::
-
-    *bash*::::
-
-      Bash.
-
-    *elvish*::::
-
-      Elvish.
-
-    *fish*::::
-
-      fish.
-
-    *nushell*::::
-
-      Nushell.
-
-    *powershell*::::
-
-      PowerShell.
-
-    *zsh*::::
-
-      Zsh.
 
 ifndef::site-gen-antora[include::{includedir}/section-exit-status.adoc[]]
 ifdef::site-gen-antora[include::partial$man/man1/include/section-exit-status.adoc[]]
